OO-3934: briefcase peekview use metadata only if migrated
Refactor the peek view of the briefcase course element to use the
metadata but don't force migration to prevent overloading large
instances