@@ -58,12 +58,20 @@ public class VFSMediaResource implements MediaResource {
 	public boolean acceptRanges() {
 		return true;
 	}
+	
+	public VFSLeaf getLeaf() {
+		return vfsLeaf;
+	}
+	
+	public void setLeaf(VFSLeaf vfsLeaf) {
+		this.vfsLeaf = vfsLeaf;
+	}
 
 	@Override
 	public String getContentType() {
 		String mimeType;
 		if(downloadable) {
-			mimeType = WebappHelper.getMimeType(vfsLeaf.getName());
+			mimeType = WebappHelper.getMimeType(getLeaf().getName());
 			//html, xhtml and javascript are set to force download
 			if (mimeType == null || "text/html".equals(mimeType)
 					|| "application/xhtml+xml".equals(mimeType)
@@ -75,7 +83,7 @@ public class VFSMediaResource implements MediaResource {
 				mimeType = mimeType + ";charset=" + encoding;
 			}
 		} else {
-			mimeType = WebappHelper.getMimeType(vfsLeaf.getName());
+			mimeType = WebappHelper.getMimeType(getLeaf().getName());
 			if (mimeType == null) {
 				mimeType = MIME_TYPE_OCTET_STREAM;
 				unknownMimeType = true;
@@ -92,27 +100,24 @@ public class VFSMediaResource implements MediaResource {
 
 	@Override
 	public Long getSize() {
-		long size = vfsLeaf.getSize();
-		return (size == VFSConstants.UNDEFINED) ? null : new Long(size);
+		long size = getLeaf().getSize();
+		return (size == VFSConstants.UNDEFINED) ? null : Long.valueOf(size);
 	}
 
 	@Override
 	public InputStream getInputStream() {
-		return vfsLeaf.getInputStream();
+		return getLeaf().getInputStream();
 	}
 
 	@Override
 	public Long getLastModified() {
-		long lastModified = vfsLeaf.getLastModified();
-		return (lastModified == VFSConstants.UNDEFINED) ? null : new Long(lastModified);
+		long lastModified = getLeaf().getLastModified();
+		return (lastModified == VFSConstants.UNDEFINED) ? null : Long.valueOf(lastModified);
 	}
 
-	/**
-	 * @see org.olat.core.gui.media.MediaResource#prepare(javax.servlet.http.HttpServletResponse)
-	 */
 	@Override
 	public void prepare(HttpServletResponse hres) {
-		String filename = StringHelper.urlEncodeUTF8(vfsLeaf.getName());
+		String filename = StringHelper.urlEncodeUTF8(getLeaf().getName());
 		if (unknownMimeType || downloadable) {
 			hres.setHeader("Content-Disposition", "attachment; filename*=UTF-8''" + filename);
 		} else {
